--- a/07_networks/peregrine-notebooks.ipynb
+++ b/07_networks/peregrine-notebooks.ipynb
@@ -10,20 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     /Users/SITPadmin/nltk_data...\n",
-      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
-      "[nltk_data]       date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import numpy as np\n",
@@ -31,19 +20,17 @@
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "nltk.download('averaged_perceptron_tagger')\n",
-    "\n",
     "text_folder = '../corpora/peregrine/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "#thanks to ryan for this method, which I've slightly modified\n",
-    "def draw_graph3(networkx_graph,notebook=True,output_filename='graph.html',show_buttons=True,only_physics_buttons=False):\n",
+    "def draw_graph3(networkx_graph,notebook=True,output_filename='graph.html',show_buttons=False,only_physics_buttons=False):\n",
     "    # import\n",
     "    from pyvis import network as net\n",
     "    \n",
@@ -76,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,6 +96,7 @@
     "#stopped=0 does nothing\n",
     "#stopped=1 will take out stopwords from nltk's list.\n",
     "#stopped=2 will exclude all words that are not Nouns, Verbs, or Adjectives.\n",
+    "\n",
     "def getsents(fn,stopped):\n",
     "    with open(text_folder+fn) as file:\n",
     "        filetext = file.read().lower()\n",
@@ -119,23 +107,24 @@
     "    sents = []\n",
     "    for s in sents_unstopped:\n",
     "        st = []\n",
-    "        for w in s:\n",
-    "            if(stopped==1):\n",
-    "                if w not in stop_words:\n",
+    "        if(\"like\" in s or \"as\" in s):\n",
+    "            for w in s:\n",
+    "                if(stopped==1):\n",
+    "                    if w not in stop_words:\n",
+    "                        st.append(lemma.lemmatize(w))\n",
+    "                else:\n",
     "                    st.append(lemma.lemmatize(w))\n",
-    "            else:\n",
-    "                st.append(lemma.lemmatize(w))\n",
-    "        sents.append(st)\n",
+    "            sents.append(st)\n",
     "    return sents\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def makegraph(sents,stopped,woi):\n",
+    "def makegraph(sents,stopped):\n",
     "    G = nx.Graph()\n",
     "    sent_holder = []    \n",
     "    part_dict = {}\n",
@@ -154,51 +143,49 @@
     "    num_sents = len(sents)\n",
     "    storelast = \"\"\n",
     "    for s in sents:\n",
-    "        if(\"like\" in s):\n",
-    "            bigs = list(nltk.bigrams(s))\n",
-    "            if(len(bigs)>0):\n",
-    "            #if sents.index(s)>0:\n",
-    "            #    G.add_edge(storelast, bigs[0][0])\n",
-    "                for pair in bigs:\n",
-    "                    p0 = part_dict[pair[0]][:1]\n",
-    "                    p1 = part_dict[pair[1]][:1]\n",
-    "                    color0 = '#8c8c8c'\n",
-    "                    color1 = '#8c8c8c'\n",
-    "                    size0 = 4\n",
-    "                    size1 = 4\n",
-    "                    #if pair[0] in woi or pair[1] in woi:\n",
-    "                    if pair[0] in colordict.keys():\n",
-    "                        color0 = colordict[pair[0]][0]\n",
-    "                        size0 = colordict[pair[0]][1]\n",
-    "                    elif p0 in colordict.keys():\n",
-    "                        color0 = colordict[p0][0]\n",
-    "                        size0 = colordict[p0][1]\n",
-    "                    if pair[1] in colordict.keys():\n",
-    "                        color1 = colordict[pair[1]][0]\n",
-    "                        size1 = colordict[pair[1]][1]  \n",
-    "                    elif p1 in colordict.keys():\n",
-    "                        color1 = colordict[p1][0]\n",
-    "                        size1 = colordict[p1][1]\n",
-    "                    G.add_node(pair[0],color=color0, size=size0)\n",
-    "                    G.add_node(pair[1],color=color1, size=size1)\n",
-    "                    G.add_edge(pair[0], pair[1],color=\"grey\")\n",
-    "                if sents.index(s)<num_sents-1:\n",
-    "                    storelast = bigs[len(bigs)-1][1]\n",
+    "        bigs = list(nltk.bigrams(s))\n",
+    "        if(len(bigs)>0):\n",
+    "        #if sents.index(s)>0:\n",
+    "        #    G.add_edge(storelast, bigs[0][0])\n",
+    "            for pair in bigs:\n",
+    "                p0 = part_dict[pair[0]][:1]\n",
+    "                p1 = part_dict[pair[1]][:1]\n",
+    "                color0 = '#8c8c8c'\n",
+    "                color1 = '#8c8c8c'\n",
+    "                size0 = 4\n",
+    "                size1 = 4\n",
+    "                if pair[0] in colordict.keys():\n",
+    "                    color0 = colordict[pair[0]][0]\n",
+    "                    size0 = colordict[pair[0]][1]\n",
+    "                elif p0 in colordict.keys():\n",
+    "                    color0 = colordict[p0][0]\n",
+    "                    size0 = colordict[p0][1]\n",
+    "                if pair[1] in colordict.keys():\n",
+    "                    color1 = colordict[pair[1]][0]\n",
+    "                    size1 = colordict[pair[1]][1]  \n",
+    "                elif p1 in colordict.keys():\n",
+    "                    color1 = colordict[p1][0]\n",
+    "                    size1 = colordict[p1][1]\n",
+    "                G.add_node(pair[0],color=color0, size=size0)\n",
+    "                G.add_node(pair[1],color=color1, size=size1)\n",
+    "                G.add_edge(pair[0], pair[1],color=\"grey\")\n",
+    "            if sents.index(s)<num_sents-1:\n",
+    "                storelast = bigs[len(bigs)-1][1]\n",
     "    return G"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = makegraph(getsents(\"jan-30.txt\",1),1,birds)"
+    "g = makegraph(getsents(\"dec-27.txt\",1),1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -215,10 +202,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1a23000cf8>"
+       "<IPython.lib.display.IFrame at 0x1a1d7f42b0>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
